changed client API
