# api/swagger.json
@@ -223,11 +223,15 @@
         "client_interaction.CommandExecutionInfo": {
             "type": "object",
             "required": [
+                "found",
                 "message",
                 "success",
                 "value"
             ],
             "properties": {
+                "found": {
+                    "type": "boolean"
+                },
                 "message": {
                     "type": "string"
                 },
@@ -296,15 +300,19 @@
         "client_interaction.GetCommandExecutionInfoResponse": {
             "type": "object",
             "required": [
-                "found",
-                "info"
+                "info",
+                "isLeader",
+                "leaderId"
             ],
             "properties": {
-                "found": {
-                    "type": "boolean"
-                },
                 "info": {
                     "$ref": "#/definitions/client_interaction.CommandExecutionInfo"
+                },
+                "isLeader": {
+                    "type": "boolean"
+                },
+                "leaderId": {
+                    "type": "string"
                 }
             }
         },
